--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action = "http://localhost:8080/oppilaat.html">
+    <input type = "submit" value = "Lisää opiskelija">
+</form> <br>
+<form action = "http://localhost:8080/Kurssi.html">
+    <input type = "submit" value = "Lisää kurssi">
+</form>
 </body>
 </html>
