--- a/src/main/resources/static/Kurssi.html
+++ b/src/main/resources/static/Kurssi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kurssin lisääminen</title>
 </head>
 <body>
 <form method="post" action="http://localhost:8080/addKurssit">
