--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Admin sivu</title>
 </head>
 <body>
+<h1>Historian paras admin sivu</h1>
 <form action = "http://localhost:8080/oppilaat.html">
     <input type = "submit" value = "Lisää opiskelija">
 </form> <br>
+<form action = "http://localhost:8080/allOppilaat">
+    <input type = "submit" value = "Tarkastele opiskelijoita">
+</form> <br>
 <form action = "http://localhost:8080/Kurssi.html">
     <input type = "submit" value = "Lisää kurssi">
-</form>
+</form><br>
+<form action = "http://localhost:8080/allKurssit">
+    <input type = "submit" value = "Tarkastele kursseja">
+</form><br>
 </body>
 </html>
