--- a/src/main/resources/static/oppilaat.html
+++ b/src/main/resources/static/oppilaat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opiskelija lisäys</title>
 </head>
 <body>
 <form method="post" action="http://localhost:8080/addOppilaat">
@@ -13,6 +13,8 @@
     <input type="text" name="lname"><br>
     <label>Anna osoitteesi:</label><br>
     <input type="text" name="address"><br>
+    <label>Luo itesellesi opiskelija numero:</label><br>
+    <input type="text" name="opiskelijaID"><br>
     <input type="submit" value="Lisaa" >
 
 
