--- a/src/main/resources/static/kurssiTarkastelu.html
+++ b/src/main/resources/static/kurssiTarkastelu.html
@@ -16,5 +16,11 @@
   <input type="text" name="kurssiID"><br>
   <input type = "submit" value = "Hae">
 </form>
+
+<form action = "http://localhost:8080/coursesbyteacher">
+    <label>Etsi kurssia opettajan nimella:</label><br>
+    <input type="text" name="opettaja"><br>
+    <input type = "submit" value = "Hae">
+</form>
 </body>
 </html>
