Seppo koskisen t-paita

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
 <form action = "http://localhost:8080/oppilaat.html">
     <input type = "submit" value = "Lisää opiskelija" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px; ">
 </form> <br>
-<form action = "http://localhost:8080/allOppilaat">
+<form action = "http://localhost:8080/Oppilaat">
     <input type = "submit" value = "Tarkastele opiskelijoita" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px;">
 </form> <br>
 <form action = "http://localhost:8080/Kurssi.html">
