Suurin osa toimii

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,8 +27,8 @@
 <form action = "http://localhost:8080/oppilaat.html">
     <input type = "submit" value = "Lisää opiskelija" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px; ">
 </form> <br>
-<form action = "http://localhost:8080/Oppilaat">
-    <input type = "submit" value = "Tarkastele opiskelijoita" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px;">
+<form action = "http://localhost:8080/oppilasHaku.html">
+    <input type = "submit" value = "Tarkastele opiskelijoita" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px; ">
 </form> <br>
 <form action = "http://localhost:8080/Kurssi.html">
     <input type = "submit" value = "Lisää kurssi" style="border-radius: 25px; background-color: green; font-weight: bold; font-size: 30px;">
