--- a/src/main/resources/static/oppilasHaku.html
+++ b/src/main/resources/static/oppilasHaku.html
@@ -5,8 +5,8 @@
     <title>Hae oppilaita </title>
 </head>
 <body>
-<form action = "http://localhost:8080/studentbyid">
-    <label>Etsi opiskelijaa etunimen perusteella:</label><br>
+<form method="get" action = "http://localhost:8080/studentbyid">
+    <label>Etsi opiskelijaa ID:n mukaan :</label><br>
     <input type="text" name="opiskelijaID"><br>
     <input type = "submit" value = "Hae">
 </form>
