--- a/src/main/resources/static/Kurssi.html
+++ b/src/main/resources/static/Kurssi.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div>
-<form method="post" action="http://localhost:8080/addKurssit">
+<form method="post" action="http://localhost:8080/addcourse">
     <h1>Lisää kurssi</h1>
     <label style="color: blue; font-size:20px;">Syötä kurssin nimi:</label><br>
     <input type="text" name="coursename"><br>
