--- a/src/main/resources/static/kurssiTarkastelu.html
+++ b/src/main/resources/static/kurssiTarkastelu.html
@@ -22,5 +22,10 @@
     <input type="text" name="opettaja"><br>
     <input type = "submit" value = "Hae">
 </form>
+
+<form action = "http://localhost:8080/allcourses">
+    <label>Näytä kaikki kurssit:</label><br>
+    <input type = "submit" value = "Hae">
+</form>
 </body>
 </html>
