--- a/src/main/resources/static/oppilaat.html
+++ b/src/main/resources/static/oppilaat.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<form method="post" action="http://localhost:8080/addOppilaat">
+<form method="post" action="http://localhost:8080/addstudent">
     <div>
     <h1>Lisää itsesi opillas tietokantaan</h1>
     <label style="color: blue; font-size:20px;">Anna etunimesi:</label><br>
